Make notice for archiving more clear

--- a/README
+++ b/README
@@ -1,4 +1,8 @@
-**ARCHIVED PROJECT** AdoptOpenJDK has moved to the Eclipse Adoptium Project. This repo is effectively now at [https://www.github.com/adoptium/jdk8u](https://www.github.com/adoptium/jdk8u)
+**************************************************************************************************************************************************
+**ARCHIVED PROJECT** AdoptOpenJDK has moved to the Eclipse Adoptium Project. This repo is effectively now at https://www.github.com/adoptium/jdk8u
+**************************************************************************************************************************************************
+
+------
 
 README:
   This file should be located at the top of the OpenJDK Mercurial root
